push new changes

--- a/front-end/src/app/globals.css
+++ b/front-end/src/app/globals.css
@@ -124,3 +124,32 @@ body {
   text-shadow: 0 4px 5px rgba(255, 255, 255, 0.4),
                0 6px 10px rgba(255, 255, 255, 0.2);
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* final fallback */
+  width: 0;      /* vertical */
+  height: 0;     /* horizontal — important for horizontal scrollers */
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -1000px 0;
+  }
+  100% {
+    background-position: 1000px 0;
+  }
+}
+
+.animate-shimmer {
+  background-size: 1000px 100%;
+  animation: shimmer 2s infinite linear;
+}
+
